Initial files has been updated

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="Wetaskiwin Literacy & Wellness Services LTD" content="Be An Agent Of Change And Together, We Build A Peaceful Community"/>
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wetaskiwin Literacy & Wellness Services LTD</title>
